field组件添加label位置支持

--- a/docs/src/.vuepress/styles/index.scss
+++ b/docs/src/.vuepress/styles/index.scss
@@ -13,5 +13,6 @@ $success-color: #38bd0e; // 成功
 $warning-color: #ffa217; // 警告
 $error-color: #ff2200; // 错误
 $tips-color: #909399; // 信息
+$message-color: #909399; // 信息
 
 $link-color: #ff6a00;
