修复2处错误

--- a/docs/src/.vuepress/styles/index.scss
+++ b/docs/src/.vuepress/styles/index.scss
@@ -33,7 +33,7 @@ $button-success-color:white;// success 风格文字颜色
 $button-success-background-color: $success-color;// success 风格背景色
 $button-disabled-background-color: $border-color2;// 禁用状态背景色
 
-$card-border-color: $border-color; // card组件边框色
+$card-border-color: $border-color2; // card组件边框色
 
 $checkbox-color:$border-color; // 复选框默认颜色
 $checkbox-selected-color:$main-color; // 复选框被选中颜色
