更新loading组件及说明文档

--- a/docs/src/.vuepress/styles/index.scss
+++ b/docs/src/.vuepress/styles/index.scss
@@ -58,6 +58,10 @@ $link-error-color:$error-color;// error 风格文字颜色
 $link-success-color:$success-color;// success 风格文字颜色
 $link-disabled-color: $font-color3;
 
+
+$loading-color: $primary-color;// loading组件圆环色
+$loading-border-color: $primary-color;// loading组件圆环色
+
 $picker-border-color: $border-color; // picker组件边框色
 $picker-background-color: $border-color; // picker组件背景色
 
